Updating leftbar: projects, no resume yet

--- a/src/_includes/leftbar.html
+++ b/src/_includes/leftbar.html
@@ -1,6 +1,7 @@
 <h4>About</h4>
 <ul>
-	<li><a href="/resume.html">Resume</a></li>
+	<!--<li><a href="/resume.html">Resume</a></li>-->
+	Resume
 	<li></li>
 </ul>
 
@@ -8,6 +9,8 @@
 <ul>
 	<li><a href='http://www.dotweb-toolkit.com'>DotWeb</a></li>
 	<li><a href='http://www.pictourist.com/'>PicTourist</a></li>
+	<li><a href='http://blog.bluetreelabs.com/2009/08/vpn-over-skype/'>Skype VPN</a></li>
+	<li><a href='http://pagestack.appspot.com/'>Page Stack</a></li>
 	<li><a href='http://www.sharparchitecture.net/'>S#arp Architecture</a></li>
 	<li><a href='http://openssl-net.sourceforge.net/'>OpenSSL.NET</a></li>
 	<li><a href='http://stackoverflow.com/questions/217549/which-typesafe-enum-in-c-are-you-using'>BOOST_ENUM</a></li>
