--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -49,16 +49,42 @@ a {
 
 #content pre {
 	padding: 0 1.5em;
+	border: 1px solid #222;
 }
 
 #content pre, #content p code, #content li code {
 	background: #eee;
+	font-family: 'Bitstream Vera Sans Mono', Monaco, 'Courier New', monospace !important;
+	font-style: normal !important;
+	font-variant: normal !important;
+	font-weight: normal !important;
 }
 
 #content a code {
 	background: transparent;
 }
 
-.syntaxhighlighter {
-	font-size: 12px !important;
+.syntaxhighlighter
+{
+	border: 2px solid #222 !important;
+}
+
+.syntaxhighlighter,
+.syntaxhighlighter div,
+.syntaxhighlighter code,
+.syntaxhighlighter table,
+.syntaxhighlighter table td,
+.syntaxhighlighter table tr,
+.syntaxhighlighter table tbody
+{
+	font-family: 'Bitstream Vera Sans Mono', Monaco, 'Courier New', monospace !important;
+	font-style: normal !important;
+	font-variant: normal !important;
+	font-weight: normal !important;
+}
+
+.syntaxhighlighter .line.alt1,
+.syntaxhighlighter .line.alt2
+{
+	background-color: #eee !important;
 }
