--- a/src/_includes/leftbar.html
+++ b/src/_includes/leftbar.html
@@ -1,7 +1,6 @@
 <h4>About</h4>
 <ul>
-	<!--<li><a href="/resume.html">Resume</a></li>-->
-	Resume
+	<li><a href="/resume.html">Resume</a></li>
 	<li></li>
 </ul>
 
