--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -9,6 +9,7 @@
 
 	<!--blueprint CSS-->
 	<link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">
 	<!--[if lt IE 8]><link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection"/><![endif]-->
 	
 	<!-- syntax highlighting CSS -->
@@ -17,6 +18,7 @@
 	
 	<!--this site's CSS-->
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" />
+	<link rel="stylesheet" href="/css/print.css" type="text/css" media="print" />
 	
 	<script type="text/javascript">	
 		var isLocal = !!( /localhost|127\.0\.0/i.test(window.location.href) );
