--- a/src/_includes/leftbar.html
+++ b/src/_includes/leftbar.html
@@ -6,10 +6,10 @@
 
 <h4>Projects</h4>
 <ul>
-	<li><a href='http://www.pictourist.com/'>PicTourist</a></li>
-	<li><a href='http://pagestack.appspot.com/'>Page Stack</a></li>
+	<li><a href='http://pagestackandroid.appspot.com/'>Page Stack</a></li>
 	<li><a href='http://www.sharparchitecture.net/'>S#arp Architecture</a></li>
 	<li><a href='http://openssl-net.sourceforge.net/'>OpenSSL.NET</a></li>
 	<li><a href='http://stackoverflow.com/questions/217549/which-typesafe-enum-in-c-are-you-using'>BOOST_ENUM</a></li>
+	<li><a href='https://github.com/flaub'>My GitHub Repositories</a></li>
 	<li></li>
 </ul>
